- Added integration with Moo package. - Added check existing method and field. - Updated test configuration file. - Added more unit test.

--- a/t/config.json
+++ b/t/config.json
@@ -3,7 +3,7 @@
        { "name" : "firstname", "format" : "s", "type": "Str" },
        { "name" : "lastname",  "format" : "s", "type": "Str" },
        { "name" : "age",       "format" : "d", "type": "Int" },
-       { "name" : "sex",       "format" : "s", "type": "Str" },
+       { "name" : "sex",       "format" : "s", "type": "Str", "source" : [ "m", "f" ]  },
        { "name" : "location",  "format" : "s", "type": "Str", "source" : [ "UK", "USA" ] }
    ],
    "methods" : [
